--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "bt-web2",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for bt-web2 goes here",
+  "description": "Online racing perhaps?",
   "repository": "",
-  "license": "MIT",
+  "license": "Proprietary",
   "author": "",
   "directories": {
     "doc": "doc",
@@ -18,35 +18,59 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "@ember/optional-features": "^1.0.0",
+    "@ember/optional-features": "^1.1.0",
+    "@types/ember": "^3.1.1",
+    "@types/ember-qunit": "^3.4.7",
+    "@types/ember__test-helpers": "^0.7.9",
+    "@types/qunit": "^2.9.0",
+    "@types/rsvp": "^4.0.3",
+    "@types/web-bluetooth": "0.0.5",
+    "@wdio/cli": "^5.16.10",
+    "@wdio/local-runner": "^5.16.10",
+    "@wdio/mocha-framework": "^5.16.10",
+    "@wdio/spec-reporter": "^5.16.5",
+    "@wdio/sync": "^5.16.10",
     "babel-eslint": "^10.0.3",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.5.2",
-    "ember-cli": "~3.14.0",
+    "chromedriver": "^78.0.1",
+    "ember-cli": "~3.13.1",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.11.1",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
-    "ember-cli-htmlbars": "^4.0.5",
+    "ember-cli-htmlbars": "^4.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^3.0.0",
     "ember-cli-inject-live-reload": "^2.0.1",
+    "ember-cli-lodash": "^1.0.1",
+    "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
+    "ember-cli-typescript": "^3.1.1",
+    "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-cli-uglify": "^3.0.0",
-    "ember-data": "~3.14.0",
     "ember-export-application-global": "^2.0.0",
     "ember-fetch": "^6.7.0",
+    "ember-intl": "^4.2.2",
     "ember-load-initializers": "^2.1.0",
+    "ember-lodash": "^4.19.5",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.5.1",
     "ember-resolver": "^5.3.0",
-    "ember-source": "~3.14.1",
+    "ember-source": "~3.13.0",
+    "ember-truth-helpers": "^2.1.0",
     "ember-welcome-page": "^4.0.0",
+    "ember-wordpress": "^0.2.2",
     "eslint-plugin-ember": "^7.1.0",
     "eslint-plugin-node": "^10.0.0",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.9.0"
+    "qunit-dom": "^0.9.0",
+    "sass": "^1.23.6",
+    "typescript": "^3.7.3",
+    "wdio-chromedriver-service": "^5.0.2"
   },
+  "optionalDevDependencies": {},
   "engines": {
     "node": "8.* || >= 10.*"
-  }
+  },
+  "dependencies": {}
 }
