Race joining, race finishes, now working

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -11,7 +11,7 @@
     "./index.ts",
   ],
   "include": [
-    "./**/*",
+    "./**/*", "../app/server-client-common/ServerGame.ts",
   ],
   "lib": ["es2015"]
 }
