--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.3",
     "@types/ws": "^7.2.3",
+    "express": "^4.17.1",
     "ws": "^7.2.3"
   }
 }
