Changing to tourjs.ca

--- a/api/ssl-config.json
+++ b/api/ssl-config.json
@@ -1,4 +1,4 @@
 {
-  "privateKeyPath": "/etc/letsencrypt/live/staczero.com/privkey.pem",
-  "fullChain": "/etc/letsencrypt/live/staczero.com/fullchain.pem"
+  "privateKeyPath": "/etc/letsencrypt/live/tourjs.ca/privkey.pem",
+  "fullChain": "/etc/letsencrypt/live/tourjs.ca/fullchain.pem"
 }
