--- a/plugins/package.json
+++ b/plugins/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.6",
+    "@types/node": "^13.13.4",
     "node-fetch": "^2.6.0"
   }
 }
