--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ node_modules
 /.node_modules.ember-try/
 /bower.json.ember-try
 /package.json.ember-try
+
+rider-db-*.json
+pacing-challenge-records*.json
+pacing-challenge-records.json
