--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ember-load-initializers": "^2.1.0",
     "ember-lodash": "^4.19.5",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-md5": "^1.2.0",
     "ember-qunit": "^4.5.1",
     "ember-resolver": "^5.3.0",
     "ember-source": "~3.13.0",
@@ -72,6 +73,5 @@
   "engines": {
     "node": "8.* || >= 10.*"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
