--- a/package.json
+++ b/package.json
@@ -73,5 +73,7 @@
   "engines": {
     "node": "8.* || >= 10.*"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react-native-orientation": "^3.1.3"
+  }
 }
