--- a/TourJsRn2/package.json
+++ b/TourJsRn2/package.json
@@ -10,17 +10,22 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "buffer": "^6.0.3",
+    "events": "^3.2.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-ble-plx": "^2.0.2",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-image-picker": "^3.1.2",
     "react-native-orientation": "^3.1.3",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.16.1"
+    "react-native-screens": "^2.16.1",
+    "urlb64touint8array": "^1.0.3"
   },
   "devDependencies": {
     "@types/jest": "^26.0.19",
