--- a/TourJsRn2/package.json
+++ b/TourJsRn2/package.json
@@ -14,17 +14,21 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "@types/react-native-canvas": "^0.1.5",
     "buffer": "^6.0.3",
     "events": "^3.2.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-ble-plx": "^2.0.2",
+    "react-native-canvas": "^0.1.37",
+    "react-native-color-matrix-image-filters": "^5.2.10",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-image-picker": "^3.1.2",
     "react-native-orientation": "^3.1.3",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
+    "react-native-webview": "^11.0.2",
     "urlb64touint8array": "^1.0.3"
   },
   "devDependencies": {
