--- a/TourJsRn2/android/app/build.gradle
+++ b/TourJsRn2/android/app/build.gradle
@@ -150,6 +150,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            if (project.hasProperty('TOURJS_RELEASE_STORE_FILE')) {
+                storeFile file(TOURJS_RELEASE_STORE_FILE)
+                storePassword TOURJS_RELEASE_STORE_PASSWORD
+                keyAlias TOURJS_RELEASE_KEY_ALIAS
+                keyPassword TOURJS_RELEASE_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         debug {
@@ -158,7 +166,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
