--- a/TourJsRn2/android/build.gradle
+++ b/TourJsRn2/android/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+    
 }
 
 allprojects {
@@ -33,5 +34,18 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
+    }
+    // force libs to use recent buildtools
+    // https://github.com/luggit/react-native-config/issues/299
+    subprojects {
+        afterEvaluate {
+            project ->
+                if (project.hasProperty("android")) {
+                    android {
+                        compileSdkVersion = 28
+                        buildToolsVersion = "28.0.3"
+                    }
+                }
+        }
     }
 }
