--- a/TourJsRn2/android/gradle.properties
+++ b/TourJsRn2/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
+
+TOURJS_RELEASE_STORE_FILE=tourjs-key.keystore
+TOURJS_RELEASE_KEY_ALIAS=tourjs-key
+TOURJS_RELEASE_STORE_PASSWORD=Bn6le1zz
+TOURJS_RELEASE_KEY_PASSWORD=Bn6le1zz
