--- a/TourJsRn2/package.json
+++ b/TourJsRn2/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "@sayem314/react-native-keep-awake": "^1.0.4",
     "@types/react-native-canvas": "^0.1.5",
     "buffer": "^6.0.3",
     "events": "^3.2.0",
