--- a/TourJsRn2/package.json
+++ b/TourJsRn2/package.json
@@ -27,6 +27,7 @@
     "react-native-color-matrix-image-filters": "^5.2.10",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-image-picker": "^3.1.2",
+    "react-native-keyevent": "^0.2.8",
     "react-native-orientation": "^3.1.3",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
