--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "node": "8.* || >= 10.*"
   },
   "dependencies": {
+    "geolib": "^3.3.1",
     "react-native-orientation": "^3.1.3"
   }
 }
