--- a/api/package.json
+++ b/api/package.json
@@ -9,10 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow/tfjs-node": "^3.9.0",
     "@types/express": "^4.17.3",
+    "@types/web-push": "^3.3.0",
     "@types/ws": "^7.2.3",
     "express": "^4.17.1",
     "md5": "^2.3.0",
+    "ml-fnn": "^5.0.0",
+    "uuid": "^8.3.2",
+    "web-push": "^3.4.4",
     "ws": "^7.2.3"
   }
 }
