--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "ember-md5": "^1.2.0",
     "ember-qunit": "^4.5.1",
     "ember-resolver": "^5.3.0",
+    "ember-service-worker": "^9.0.1",
     "ember-source": "~3.13.0",
     "ember-truth-helpers": "^2.1.0",
     "ember-welcome-page": "^4.0.0",
@@ -75,6 +76,8 @@
   },
   "dependencies": {
     "geolib": "^3.3.1",
-    "react-native-orientation": "^3.1.3"
+    "ml-fnn": "^5.0.0",
+    "react-native-orientation": "^3.1.3",
+    "web-push": "^3.4.4"
   }
 }
