Tensorflow AI brains!

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "node": "8.* || >= 10.*"
   },
   "dependencies": {
+    "@tensorflow/tfjs-node": "^3.9.0",
     "geolib": "^3.3.1",
     "ml-fnn": "^5.0.0",
     "react-native-orientation": "^3.1.3",
