--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "md5": "^2.3.0",
     "ml-fnn": "^5.0.0",
+    "r-squared": "0.0.0",
     "uuid": "^8.3.2",
     "web-push": "^3.4.4",
     "ws": "^7.2.3"
