legacy stuff builds again

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -14,7 +14,7 @@
     "./index.ts",
   ],
   "include": [
-    "./**/*", "../tourjs-react/src/tourjs-shared/ServerGame.ts", "../tourjs-shared/ServerConstants.ts",
+    "./**/*", "./shared/ServerGame.ts", "./shared/ServerConstants.ts",
   ],
   "lib": ["es2015"]
 }
