--- a/tourjs-ember/tsconfig.json
+++ b/tourjs-ember/tsconfig.json
@@ -37,6 +37,7 @@
   },
   "include": [
     "server-client-common/**/*",
+    "app/shared/**/*",
     "app/**/*",
     "tests/**/*",
     "types/**/*"
