--- a/tourjs-ember/tsconfig.json
+++ b/tourjs-ember/tsconfig.json
@@ -37,7 +37,7 @@
   },
   "include": [
     "server-client-common/**/*",
-    "app/shared/**/*",
+    "app/tourjs-shared/**/*",
     "app/**/*",
     "tests/**/*",
     "types/**/*"
