--- a/tourjs-ember/package.json
+++ b/tourjs-ember/package.json
@@ -59,6 +59,7 @@
     "ember-resolver": "^5.3.0",
     "ember-service-worker": "^9.0.1",
     "ember-source": "~3.13.0",
+    "ember-three": "^3.0.3",
     "ember-truth-helpers": "^2.1.0",
     "ember-welcome-page": "^4.0.0",
     "ember-wordpress": "^0.2.2",
@@ -67,6 +68,7 @@
     "loader.js": "^4.7.0",
     "qunit-dom": "^0.9.0",
     "sass": "^1.23.6",
+    "three": "^0.137.5",
     "typescript": "^3.7.3",
     "wdio-chromedriver-service": "^5.0.2"
   },
@@ -76,6 +78,7 @@
   },
   "dependencies": {
     "@tensorflow/tfjs-node": "^3.9.0",
+    "@types/three": "^0.137.0",
     "geolib": "^3.3.1",
     "ml-fnn": "^5.0.0",
     "react-native-orientation": "^3.1.3",
