--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,9 @@
     "@types/web-push": "^3.3.0",
     "@types/ws": "^7.2.3",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.1",
+    "express-oauth2-jwt-bearer": "^1.1.0",
+    "jwks-rsa": "^2.0.5",
     "md5": "^2.3.0",
     "ml-fnn": "^5.0.0",
     "mysql2": "^2.3.3",
