--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-jwt": "^6.1.1",
     "express-oauth2-jwt-bearer": "^1.1.0",
+    "express-openid-connect": "^2.7.2",
     "jwks-rsa": "^2.0.5",
     "md5": "^2.3.0",
     "ml-fnn": "^5.0.0",
