--- a/tourjs-react/package.json
+++ b/tourjs-react/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sass": "^1.45.1",
+    "seedrandom": "^3.0.5",
     "three": "^0.138.3",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
